# merlin

./: .gitignore  INSTALL.md  environment.yml  requirements.txt
egs/build_your_own_voice/libritts-happy-10k/: 00_prepare_database.sh  03_prepare_acoustic_features.sh  file_id_list.txt
egs/build_your_own_voice/libritts-happy-1k/: 02_prepare_labels.sh  file_id_list.txt
egs/build_your_own_voice/s1/: 02_prepare_labels.sh
src/: run_merlin.py  setup_env.sh
src/frontend/: min_max_norm.py
src/utils/: providers.py
tools/: HTS-2.3alpha_for_HTK-3.4.1.patch  compile_htk.sh  symlink_dataset.sh
tools/SPTK-3.9/: Makefile  config.status
tools/SPTK-3.9/include/: Makefile
tools/SPTK-3.9/lib/: Makefile
tools/SPTK-3.9/script/: Makefile  bell  glogsp  grlogsp  gseries  gwave  mgc2mgclsp  mgclsp2mgc  raw2wav  wav2raw
tools/festival/: config.status
tools/festival/config/: modincludes.inc  system.mak
tools/festival/examples/: dumpfeats  durmeanstd  latest  make_utts  powmeanstd  run-festival-script  saytime  scfg_parse_text  text2pos  text2utt  text2wave
tools/festvox/: config.status
tools/festvox/config/: config
tools/htk/: Makefile  config.status
tools/htk/HTKTools/: HCopy  (+12 more)
tools/postfilter/src/: 00_make.sh  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  lsppf.c  mcpf.c
tools/postfilter/src/.deps/: lsppf-lsppf.Po  mcpf-mcpf.Po  mcpf-mcpf.Tpo
tools/postfilter/src/autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.2  traces.2t  traces.3
tools/speech_tools/: config.status
(+225 files in other folders)
